add html markup for "Pricing"

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,49 @@
     <link rel="stylesheet" href="style.min.css" />
   </head>
   <body>
-
-
+    <main>
+      <section class="pricing">
+        <div class="wrapper">
+          <div class="pricing-container">
+            <h2>Fork Subscription Pricing</h2>
+            <ul class="pricing__list">
+              <li class="pricing__item">
+                <h3 class="item__title">Students</h3>
+                <p class="item__price">$29</p>
+                <p class="item__price-period">per month</p>
+                <p class="item__type">Personal License</p>
+                <a href="" class="item__btn">purchase</a>
+              </li>
+              <li class="pricing__item">
+                <h3 class="item__title">professional</h3>
+                <p class="item__price">$59</p>
+                <p class="item__price-period">per month</p>
+                <p class="item__type">
+                  Professional License <br />Email Support
+                </p>
+                <a href="" class="item__btn">purchase</a>
+              </li>
+              <li class="pricing__item">
+                <h3 class="item__title">agency</h3>
+                <p class="item__price">$99</p>
+                <p class="item__price-period">per month</p>
+                <p class="item__type">1-12 Team Members <br />Phone Support</p>
+                <a href="" class="item__btn">purchase</a>
+              </li>
+              <li class="pricing__item">
+                <h3 class="item__title">enterprise</h3>
+                <p class="item__price">$159</p>
+                <p class="item__price-period">per month</p>
+                <p class="item__type">
+                  Unlimited Team Members<br />P24/ 7 Phone Support
+                </p>
+                <a href="" class="item__btn">purchase</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <!--Scripts-->
     <script src="app.min.js"></script>
