--- a/src/index.html
+++ b/src/index.html
@@ -21,47 +21,63 @@
   <body>
     <main>
       <section class="pricing">
-        <div class="wrapper">
-          <div class="pricing-container">
-            <h2 class="pricing__title">Fork Subscription Pricing</h2>
-            <ul class="pricing__list">
-              <li class="pricing__list-item">
-                <h3 class="item-title">Students</h3>
-                <p class="item-price">$<span class="item-price-amount">29</span>  <span class="item-price-period">per month</span></p>
-                <div class="item-buy">
-                  <p class="item-buy-type">Personal License <br /></p>
-                  <a href="#" class="item-buy-btn">purchase</a>
-                </div>
-              </li>
-              <li class="pricing__list-item">
-                <h3 class="item-title">professional</h3>
-                <p class="item-price">$<span class="item-price-amount">59</span>  <span class="item-price-period">per month</span></p>
-                <div class="item-buy">
-                  <p class="item-buy-type">
-                    Professional License <br />Email Support
+        <div class="pricing--glass-bg">
+          <div class="wrapper">
+            <div class="pricing-container">
+              <h2 class="pricing__title">Fork Subscription Pricing</h2>
+              <ul class="pricing__list">
+                <li class="pricing__list-item">
+                  <h3 class="item-title">Students</h3>
+                  <p class="item-price">
+                    $<span class="item-price-amount">29</span>
+                    <span class="item-price-period">per month</span>
                   </p>
-                  <a href="#" class="item-buy-btn">purchase</a>
-                </div>
-              </li>
-              <li class="pricing__list-item">
-                <h3 class="item-title">agency</h3>
-                <p class="item-price">$<span class="item-price-amount">99</span>  <span class="item-price-period">per month</span></p>
-                <div class="item-buy">
-                  <p class="item-buy-type">1-12 Team Members <br />Phone Support</p>
-                  <a href="#" class="item-buy-btn">purchase</a>
-                </div>
-              </li>
-              <li class="pricing__list-item">
-                <h3 class="item-title">enterprise</h3>
-                <p class="item-price">$ <span class="item-price-amount">159</span>  <span class="item-price-period">per month</span></p>
-                <div class="item-buy">
-                  <p class="item-buy-type">
-                    Unlimited Team Members<br />24/ 7 Phone Support
+                  <div class="item-buy">
+                    <p class="item-buy-type">Personal License <br /></p>
+                    <a href="#" class="item-buy-btn">purchase</a>
+                  </div>
+                </li>
+                <li class="pricing__list-item">
+                  <h3 class="item-title">professional</h3>
+                  <p class="item-price">
+                    $<span class="item-price-amount">59</span>
+                    <span class="item-price-period">per month</span>
                   </p>
-                  <a href="#" class="item-buy-btn">purchase</a>
-                </div>
-              </li>
-            </ul>
+                  <div class="item-buy">
+                    <p class="item-buy-type">
+                      Professional License <br />Email Support
+                    </p>
+                    <a href="#" class="item-buy-btn">purchase</a>
+                  </div>
+                </li>
+                <li class="pricing__list-item">
+                  <h3 class="item-title">agency</h3>
+                  <p class="item-price">
+                    $<span class="item-price-amount">99</span>
+                    <span class="item-price-period">per month</span>
+                  </p>
+                  <div class="item-buy">
+                    <p class="item-buy-type">
+                      1-12 Team Members <br />Phone Support
+                    </p>
+                    <a href="#" class="item-buy-btn">purchase</a>
+                  </div>
+                </li>
+                <li class="pricing__list-item">
+                  <h3 class="item-title">enterprise</h3>
+                  <p class="item-price">
+                    $ <span class="item-price-amount">159</span>
+                    <span class="item-price-period">per month</span>
+                  </p>
+                  <div class="item-buy">
+                    <p class="item-buy-type">
+                      Unlimited Team Members<br />24/ 7 Phone Support
+                    </p>
+                    <a href="#" class="item-buy-btn">purchase</a>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
