header-menu changed header-container

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
   <header class="header">
     <div class="header__wrapper">
-      <div class="header__nav container">
+      <div class="header__nav header-container">
         <div class="header__nav-logo">
           <a href="#">
             <svg class="header__nav-logo-svg" version="1.2" baseProfile="tiny" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 221.3 211" overflow="visible" xml:space="preserve">
@@ -74,7 +74,7 @@
           <a class="header__nav-menu-item" href="#">Support</a>
         </menu>
       </div>
-      <div class="header__hat container">
+      <div class="header__hat header-container">
         <h1 class="header__hat-title">Fork App</h1>
         <div class="header__hat-text">
           <div class="header__hat-text--small">A Real Gamechanger In The World Of Web-Development</div>
