create new scss-file for 'pricing'

--- a/src/index.html
+++ b/src/index.html
@@ -13,23 +13,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-          rel="stylesheet"/>
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <!--Stylesheets-->
     <link rel="stylesheet" href="style.min.css" />
   </head>
   <body>
-
-  <header class="header">
-    <div class="header__wrapper">
-      <div class="header__nav header-container">
-        <div class="header__nav-logo">
-          <a href="#">
-            <svg class="header__nav-logo-svg" version="1.2" baseProfile="tiny" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 221.3 211" overflow="visible" xml:space="preserve">
+    <header class="header">
+      <div class="header__wrapper">
+        <div class="header__nav header-container">
+          <div class="header__nav-logo">
+            <a href="#">
+              <svg
+                class="header__nav-logo-svg"
+                version="1.2"
+                baseProfile="tiny"
+                id="Слой_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                viewBox="0 0 221.3 211"
+                overflow="visible"
+                xml:space="preserve"
+              >
+                <g>
                   <g>
-                     <g>
-                        <path d="M221.3,107.8c0.1-2.1-0.7-3.9-2-5.3L199.9,83l0.2-44.7c-0.1-0.3-0.2-0.8-0.3-1.2c0-0.1,0-0.3-0.1-0.4
+                    <path
+                      d="M221.3,107.8c0.1-2.1-0.7-3.9-2-5.3L199.9,83l0.2-44.7c-0.1-0.3-0.2-0.8-0.3-1.2c0-0.1,0-0.3-0.1-0.4
 			c-0.1-0.2-0.2-0.5-0.2-0.7c-0.1-0.3-0.1-0.5-0.2-0.8c-0.1-0.1-0.2-0.3-0.2-0.4c-0.1-0.3-0.3-0.5-0.4-0.8l-0.2-0.3
 			c-0.2-0.3-0.4-0.5-0.6-0.7c-0.1-0.1-0.2-0.2-0.3-0.3c-0.3-0.2-0.5-0.5-0.8-0.7c-0.2-0.1-0.3-0.2-0.5-0.3l-0.3-0.1
 			c-0.1-0.1-0.3-0.2-0.5-0.3c-0.6-0.3-1.4-0.4-2.2-0.5h-0.4h-16.1c-1.8,0-3.5,0.7-4.8,2c-1.3,1.3-2,3-2,4.8c0,3.7,3.1,6.8,6.8,6.8
@@ -52,97 +67,129 @@
 			c0,0.5-0.1,0.9-0.3,1.2l0.2,44.7L2,102.5c-1.4,1.4-2.1,3.1-2,5.3c0,1.9,0.6,3.7,1.9,5l19.3,19.5l-0.1,45c0.1,0.3,0.2,0.8,0.3,1.3
 			c0-0.1,0-0.2,0-0.1c0.1,0.2,0.1,0.5,0.2,0.7c0.1,0.2,0.1,0.4,0.2,0.6c0.1,0.2,0.1,0.5,0.2,0.7l0.1,0.3c0.1,0.3,0.3,0.6,0.4,0.8
 			l0.2,0.2c0.2,0.3,0.4,0.6,0.6,0.8l0.3,0.3c0.3,0.3,0.6,0.5,0.8,0.7c0.1,0.1,0.3,0.2,0.4,0.2l0.9,0.5c0.8,0.3,1.7,0.5,2.5,0.5
-			l16.2,0.1c1.8,0,3.6-0.7,4.8-2c1.3-1.3,2-2.9,2-4.7C51.4,174.6,48.4,171.6,44.5,171.6z" />
-                     </g>
+			l16.2,0.1c1.8,0,3.6-0.7,4.8-2c1.3-1.3,2-2.9,2-4.7C51.4,174.6,48.4,171.6,44.5,171.6z"
+                    />
                   </g>
-               </svg>
-            <div class="header__nav-logo-text">Forkio</div>
-          </a>
+                </g>
+              </svg>
+              <div class="header__nav-logo-text">Forkio</div>
+            </a>
+          </div>
+          <button class="header__nav-btn header-btn">Buy Now</button>
+          <button class="header__dropdown-burger"><span></span></button>
+          <menu class="header__dropdown-menu">
+            <a class="header__drop-menu-item" href="#">Overview</a>
+            <a class="header__drop-menu-item" href="#">About Fork</a>
+            <a class="header__drop-menu-item" href="#">Buying Options</a>
+            <a class="header__drop-menu-item" href="#">Support</a>
+          </menu>
+          <menu class="header__nav-menu">
+            <a class="header__nav-menu-item" href="#">Overview</a>
+            <a class="header__nav-menu-item" href="#">About Fork</a>
+            <a class="header__nav-menu-item" href="#">Buying Options</a>
+            <a class="header__nav-menu-item" href="#">Support</a>
+          </menu>
         </div>
-        <button class="header__nav-btn header-btn">Buy Now</button>
-        <button class="header__dropdown-burger"><span></span></button>
-        <menu class="header__dropdown-menu">
-          <a class="header__drop-menu-item" href="#">Overview</a>
-          <a class="header__drop-menu-item" href="#">About Fork</a>
-          <a class="header__drop-menu-item" href="#">Buying Options</a>
-          <a class="header__drop-menu-item" href="#">Support</a>
-        </menu>
-        <menu class="header__nav-menu">
-          <a class="header__nav-menu-item" href="#">Overview</a>
-          <a class="header__nav-menu-item" href="#">About Fork</a>
-          <a class="header__nav-menu-item" href="#">Buying Options</a>
-          <a class="header__nav-menu-item" href="#">Support</a>
-        </menu>
-      </div>
-      <div class="header__hat header-container">
-        <h1 class="header__hat-title">Fork App</h1>
-        <div class="header__hat-text">
-          <div class="header__hat-text--small">A Real Gamechanger In The World Of Web-Development</div>
-          <div class="header__hat-text--medium">A real gamechanger in the world of web development</div>
+        <div class="header__hat header-container">
+          <h1 class="header__hat-title">Fork App</h1>
+          <div class="header__hat-text">
+            <div class="header__hat-text--small">
+              A Real Gamechanger In The World Of Web-Development
+            </div>
+            <div class="header__hat-text--medium">
+              A real gamechanger in the world of web development
+            </div>
+          </div>
+          <div class="header__hat-subtext">v. 2.8 For Mac and Windows</div>
         </div>
-        <div class="header__hat-subtext">v. 2.8 For Mac and Windows</div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <main>
     <main>
       <!--      Section "Revolutionary editor"-->
       <section class="present">
         <div class="container">
           <div class="present__wrap">
-            <div class="present__btn"><button class="btn-download">Download For Free Now</button></div>
+            <div class="present__btn">
+              <button class="btn-download">Download For Free Now</button>
+            </div>
             <span class="text-after-btn">Unlimited 30-Days Trial Period</span>
             <h2 class="present__header">Revolutionary editor</h2>
-            <p class="present__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id
-              metus id quam auctor molestie eget ut augue.</p>
+            <p class="present__text">
+              Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui
+              laoreet vulputate dignissim. Sed id metus id quam auctor molestie
+              eget ut augue.
+            </p>
           </div>
         </div>
-
-
       </section>
-<!--      Section "Here is what you get"-->
+      <!--      Section "Here is what you get"-->
       <section class="features">
         <div class="container">
           <div class="features__wrap">
             <div class="features__left-side">
               <div class="photo">
-                <img src="img/search-icon-features-section.svg" alt="search">
-                <img src="img/circle-icon-features-section.svg" alt="circle">
-                <img src="img/flask-icon-features-section.svg" alt="flask">
-                <img src="img/time-icon-features-section.svg" alt="time">
+                <img src="img/search-icon-features-section.svg" alt="search" />
+                <img src="img/circle-icon-features-section.svg" alt="circle" />
+                <img src="img/flask-icon-features-section.svg" alt="flask" />
+                <img src="img/time-icon-features-section.svg" alt="time" />
               </div>
               <div class="text">
                 <div class="features__text-blocks">
-                  <h3 class="features__text-blocks-header">Creatred to Make The Web Better</h3>
-                  <p class="features__text-blocks-paragraph">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim.
-                    Sed id metus id quam auctor molestie eget ut augue.</p>
+                  <h3 class="features__text-blocks-header">
+                    Creatred to Make The Web Better
+                  </h3>
+                  <p class="features__text-blocks-paragraph">
+                    Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra
+                    dui laoreet vulputate dignissim. Sed id metus id quam auctor
+                    molestie eget ut augue.
+                  </p>
                 </div>
                 <div class="features__text-blocks">
-                  <h3 class="features__text-blocks-header">Incredibly Powerful Tool</h3>
-                  <p class="features__text-blocks-paragraph">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat
-                    ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
+                  <h3 class="features__text-blocks-header">
+                    Incredibly Powerful Tool
+                  </h3>
+                  <p class="features__text-blocks-paragraph">
+                    Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
+                    felis odio, ut volutpat massa placerat ac. Curabitur dapibus
+                    iaculis mi gravida luctus. Aliquam erat volutpat.
+                  </p>
                 </div>
                 <div class="features__text-blocks">
-                  <h3 class="features__text-blocks-header">Experimental Stuff</h3>
-                  <p class="features__text-blocks-paragraph">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat
-                    ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
+                  <h3 class="features__text-blocks-header">
+                    Experimental Stuff
+                  </h3>
+                  <p class="features__text-blocks-paragraph">
+                    Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
+                    felis odio, ut volutpat massa placerat ac. Curabitur dapibus
+                    iaculis mi gravida luctus. Aliquam erat volutpat.
+                  </p>
                 </div>
                 <div class="features__text-blocks">
-                  <h3 class="features__text-blocks-header">Creatred to Make The Web Better</h3>
-                  <p class="features__text-blocks-paragraph">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat
-                    ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
+                  <h3 class="features__text-blocks-header">
+                    Creatred to Make The Web Better
+                  </h3>
+                  <p class="features__text-blocks-paragraph">
+                    Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
+                    felis odio, ut volutpat massa placerat ac. Curabitur dapibus
+                    iaculis mi gravida luctus. Aliquam erat volutpat.
+                  </p>
                 </div>
               </div>
             </div>
             <div class="features__photo">
-              <h2 class="features__header">&#60 Here is what you get &#62</h2>
-              <img src="img/photo-features-section.png" alt="editor" id="features-photo">
+              <h2 class="features__header">&#60; Here is what you get &#62;</h2>
+              <img
+                src="img/photo-features-section.png"
+                alt="editor"
+                id="features-photo"
+              />
             </div>
           </div>
         </div>
       </section>
 
+      <!--      Section "Pricing"-->
       <section class="pricing">
         <div class="pricing--glass-bg">
           <div class="wrapper">
@@ -189,7 +236,7 @@
                 <li class="pricing__list-item">
                   <h3 class="item-title">enterprise</h3>
                   <p class="item-price">
-                    $ <span class="item-price-amount">159</span>
+                    $<span class="item-price-amount">159</span>
                     <span class="item-price-period">per month</span>
                   </p>
                   <div class="item-buy">
