created html structure for "People are talking" and added favicon

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" href="img/favicon.png">
     <title>Fork App</title>
     <!--  Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -190,7 +191,40 @@
           </div>
         </div>
       </section>
-
+      <!--      Section "People are talking about"-->
+      <section class="main-talking-about">
+        <div class="main-talking-about__container">
+          <h2 class="main-talking-about__title">People Are Talking About Fork</h2>
+          <div class="main-talking-about__cards">
+            <div class="main-talking-about__card">
+              <img class="main-talking-about__card-img" style='' src="img/logo-1.png" alt="logo">
+              <div class="main-talking-about__card-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis.</div>
+            </div>
+            <div class="main-talking-about__card">
+              <img class="main-talking-about__card-img" src="img/logo-2.png" alt="logo">
+              <div class="main-talking-about__card-text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend nibh.</div>
+            </div>
+            <div class="main-talking-about__card">
+              <img class="main-talking-about__card-img" src="img/logo-3.png" alt="logo">
+              <div class="main-talking-about__card-text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula.</div>
+            </div>
+            <div class="main-talking-about__card">
+              <img class="main-talking-about__card-img" src="img/logo-4.png" alt="logo">
+              <div class="main-talking-about__card-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis.</div>
+            </div>
+            <div class="main-talking-about__card">
+              <img class="main-talking-about__card-img" src="img/logo-5.png" alt="logo">
+              <div class="main-talking-about__card-text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat faucibus.</div>
+            </div>
+            <div class="main-talking-about__card">
+              <img class="main-talking-about__card-img" src="img/logo-6.png" alt="logo">
+              <div class="main-talking-about__card-text">Fusce pharetra erat id odio blandit, <br>nec<br> pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.</div>
+            </div>
+          </div>
+          <div class="main-talking-about__subtext">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </div>
+          <hr class="main-talking-about__line">
+        </div>
+      </section>
       <!--      Section "Pricing"-->
       <section class="pricing">
         <div class="pricing--glass-bg">
