Section "Here is what you get" is done

--- a/src/index.html
+++ b/src/index.html
@@ -147,59 +147,55 @@
         <div class="container">
           <div class="features__wrap">
             <div class="features__left-side">
-              <div class="photo">
-                <img src="img/search-icon-features-section.svg" alt="search" />
-                <img src="img/circle-icon-features-section.svg" alt="circle" />
-                <img src="img/flask-icon-features-section.svg" alt="flask" />
-                <img src="img/time-icon-features-section.svg" alt="time" />
-              </div>
-              <div class="text">
-                <div class="features__text-blocks">
-                  <h3 class="features__text-blocks-header">
-                    Creatred to Make The Web Better
-                  </h3>
-                  <p class="features__text-blocks-paragraph">
-                    Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra
-                    dui laoreet vulputate dignissim. Sed id metus id quam auctor
-                    molestie eget ut augue.
-                  </p>
+              <div class="features__left-side-cards">
+                <div class="features__card">
+                  <div class="photo"><img src="img/search-icon-features-section.svg" alt="search" /></div>
+                  <div class="features__text-blocks">
+                    <h3 class="features__text-blocks-header">Creatred to Make The Web Better</h3>
+                    <p class="features__text-blocks-paragraph">
+                      Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra
+                      dui laoreet vulputate dignissim. Sed id metus id quam auctor
+                      molestie eget ut augue.
+                    </p>
+                  </div>
                 </div>
-                <div class="features__text-blocks">
-                  <h3 class="features__text-blocks-header">
-                    Incredibly Powerful Tool
-                  </h3>
-                  <p class="features__text-blocks-paragraph">
-                    Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
-                    felis odio, ut volutpat massa placerat ac. Curabitur dapibus
-                    iaculis mi gravida luctus. Aliquam erat volutpat.
-                  </p>
+                <div class="features__card">
+                  <div class="photo"><img src="img/circle-icon-features-section.svg" alt="circle" /></div>
+                  <div class="features__text-blocks">
+                    <h3 class="features__text-blocks-header">Incredibly Powerful Tool</h3>
+                    <p class="features__text-blocks-paragraph">
+                      Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
+                      felis odio, ut volutpat massa placerat ac. Curabitur dapibus
+                      iaculis mi gravida luctus. Aliquam erat volutpat.
+                    </p>
+                  </div>
                 </div>
-                <div class="features__text-blocks">
-                  <h3 class="features__text-blocks-header">
-                    Experimental Stuff
-                  </h3>
-                  <p class="features__text-blocks-paragraph">
-                    Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
-                    felis odio, ut volutpat massa placerat ac. Curabitur dapibus
-                    iaculis mi gravida luctus. Aliquam erat volutpat.
-                  </p>
+                <div class="features__card">
+                  <div class="photo"><img src="img/flask-icon-features-section.svg" alt="flask" /></div>
+                  <div class="features__text-blocks">
+                    <h3 class="features__text-blocks-header">Experimental Stuff</h3>
+                    <p class="features__text-blocks-paragraph">
+                      Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
+                      felis odio, ut volutpat massa placerat ac. Curabitur dapibus
+                      iaculis mi gravida luctus. Aliquam erat volutpat.
+                    </p>
+                  </div>
                 </div>
-                <div class="features__text-blocks">
-                  <h3 class="features__text-blocks-header">
-                    Creatred to Make The Web Better
-                  </h3>
-                  <p class="features__text-blocks-paragraph">
-                    Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
-                    felis odio, ut volutpat massa placerat ac. Curabitur dapibus
-                    iaculis mi gravida luctus. Aliquam erat volutpat.
-                  </p>
+                <div class="features__card">
+                  <div class="photo"><img src="img/time-icon-features-section.svg" alt="time" /></div>
+                  <div class="features__text-blocks">
+                    <h3 class="features__text-blocks-header">Creatred to Make The Web Better</h3>
+                    <p class="features__text-blocks-paragraph">
+                      Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
+                      felis odio, ut volutpat massa placerat ac. Curabitur dapibus
+                      iaculis mi gravida luctus. Aliquam erat volutpat.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
-<!--            <h2 class="features__header">&#60; Here is what you get &#62;</h2>-->
-            <div class="features__photo">
-              <h2 class="features__header">&#60; Here is what you get &#62;</h2>
-<!--              <img src="img/photo-features-section.png" alt="editor" id="features-photo"/>-->
+            <div class="features__header">
+              <h2>&#60; Here is what you get &#62;</h2>
             </div>
             <img src="img/photo-features-section.png" alt="editor" id="features-photo"/>
           </div>
