added links in the header-menu

--- a/src/index.html
+++ b/src/index.html
@@ -79,15 +79,15 @@
           <button class="header__nav-btn header-btn">Buy Now</button>
           <button class="header__dropdown-burger"><span></span></button>
           <menu class="header__dropdown-menu">
-            <a class="header__drop-menu-item" href="#">Overview</a>
-            <a class="header__drop-menu-item" href="#">About Fork</a>
-            <a class="header__drop-menu-item" href="#">Buying Options</a>
+            <a class="header__drop-menu-item" href="#overview">Overview</a>
+            <a class="header__drop-menu-item" href="#about">About Fork</a>
+            <a class="header__drop-menu-item" href="#buy">Buying Options</a>
             <a class="header__drop-menu-item" href="#">Support</a>
           </menu>
           <menu class="header__nav-menu">
-            <a class="header__nav-menu-item" href="#">Overview</a>
-            <a class="header__nav-menu-item" href="#">About Fork</a>
-            <a class="header__nav-menu-item" href="#">Buying Options</a>
+            <a class="header__nav-menu-item" href="#overview">Overview</a>
+            <a class="header__nav-menu-item" href="#about">About Fork</a>
+            <a class="header__nav-menu-item" href="#buy">Buying Options</a>
             <a class="header__nav-menu-item" href="#">Support</a>
           </menu>
         </div>
@@ -143,7 +143,7 @@
       </section>
 
       <!--      Section "Here is what you get"-->
-      <section class="features">
+      <section class="features" id="overview">
         <div class="container">
           <div class="features__wrap">
             <div class="features__left-side">
@@ -202,7 +202,7 @@
         </div>
       </section>
       <!--      Section "People are talking about"-->
-      <section class="main-talking-about">
+      <section class="main-talking-about" id="about">
         <div class="main-talking-about__container">
           <h2 class="main-talking-about__title">People Are Talking About Fork</h2>
           <div class="main-talking-about__cards">
@@ -236,7 +236,7 @@
         </div>
       </section>
       <!--      Section "Pricing"-->
-      <section class="pricing">
+      <section class="pricing" id="buy">
         <div class="pricing--glass-bg">
           <div class="wrapper">
             <div class="pricing-container">
